--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles/output.css"/>
+    <link rel="stylesheet" href="./styles/output.css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <title>Cyber Burguer - Hamburguer e Tecnologia Juntos!</title>
 </head>
 
@@ -136,7 +138,7 @@
         <!--GRID BEBIDAS-->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-10 mx-auto max-w-7xl px-2 mb-16" id="menu">
             <!-- BEBIDA ITEM -->
-            <div class="flex gap-2 w-full" >
+            <div class="flex gap-2 w-full">
                 <img src="./assets/refri-1.png" alt="Coca lata"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
 
@@ -154,7 +156,7 @@
             <!-- FIM BEBIDA ITEM -->
 
             <!-- BEBIDA ITEM -->
-            <div class="flex gap-2 w-full" >
+            <div class="flex gap-2 w-full">
                 <img src="./assets/refri-2.png" alt="Guaraná lata"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
 
@@ -178,7 +180,7 @@
     <!-- FIM MENU -->
 
     <!--MODAL CART-->
-    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden">
+    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden" id="cart-modal">
         <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
             <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
@@ -187,37 +189,30 @@
             <p class="font-bold">Total: <span id="cart-total">0.00</span></p>
 
             <p class="font-bold mt-4">Endereço para entrega:</p>
-            <input
-            type="text"
-            placeholder="Digite seu endereço para entrega..."
-            id="address"
-            class="w-full border-2 p-1 rounded my-1"
-            />
+            <input type="text" placeholder="Digite seu endereço para entrega..." id="address"
+                class="w-full border-2 p-1 rounded my-1" />
             <p class="text-red-500 font-bold hidden" id="address-warn">Digite seu endereço para entrega!</p>
 
             <div class="flex items-center justify-between mt-5 w-full">
                 <button id="close-modal-btn" class="font-bold">Fechar</button>
                 <button id="checout-btn" class="bg-green-500 text-white px-4 py-1 rounded">Finalizar pedidio</button>
             </div>
-
-
-        </div>        
+        </div>
     </div>
     <!--FIM MODAL CART-->
 
     <!--BUTTON CART FOOTER-->
     <footer class="w-full bg-red-500 py-3 fixed bottom-0 z-40 flex items-center justify-center">
-        <button 
-            class="flex items-center gap-2 text-white font-bold"
-            id="cart-btn"
-            >
+        <button class="flex items-center gap-2 text-white font-bold" id="cart-btn">
             (<span id="cart-count">0</span>)
             Veja meu carrinho
             <i class="fa fa-cart-plus text-lg text-white"></i>
-        </button>        
+        </button>
     </footer>
     <!--FIM BUTTON CART FOOTER-->
 
+
+    <script src="scripts.js"></script>
 </body>
 
 </html>
