--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="Cyber Burguer - A melhor Humburgueria da região!"/>
+        <meta property="og:image" content="https://cyber-burguer.vercel.app/assets/hamb-1.png"/>
+        <meta property="og:description" content="O melhor Hamburguer caseiro da região."/>
+        <meta property="og:site_name" content="CyberBurguer"/>
+
     <link rel="stylesheet" href="./styles/output.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
