fix cart modal bugs

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="text-white font-medium">Rua Dev 25, São Paulo - SP</span>
 
             <div class="bg-green-600 px-4 py-1 rounded-lg mt-5" id="date-span">
-                <span class="text-white font-medium">Seg. á Dom - 18:00 as 22:00</span>
+                <span class="text-white font-medium">Seg. á Dom - 18:00 as 24:00</span>
             </div>
         </div>
     </header>
@@ -189,8 +189,9 @@
     <!-- FIM MENU -->
 
     <!--MODAL CART-->
-    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden" id="cart-modal">
-        <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
+    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden" id="cart-modal"
+        style="overflow: auto;">
+        <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]" style="max-height: 90vh; overflow-y: auto;">
             <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
             <div id="cart-items" class="flex justify-between mb-2 flex-col"></div>
